# -synthesize-audio

./: .gitignore  AudioConstants.h  AudioGenerator.cpp  AudioGenerator.h  CMakeLists.txt  Delay.cpp  Delay.h  Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  MainWindow.cpp  MainWindow.h  Oscillator.cpp  Oscillator.h  README.md  SynthParams.cpp  SynthParams.h  main.cpp
libraries/imgui/: imgui.ini
libraries/sdl/lib/macos/SDL3.framework/Versions/A/Resources/: Info.plist  default.metallib
libraries/sdl/lib/macos/SDL3.framework/Versions/A/Resources/CMake/: SDL3Config.cmake
libraries/sdl/lib/macos/SDL3.framework/Versions/A/_CodeSignature/: CodeResources
prj/: AudioGenerator.h  CMakeLists.txt  main.cpp
prj/libraries/portaudio/lib/win32/: portaudio_x64.lib
prj/libraries/sdl/include/SDL3/: SDL_revision.h
prj/libraries/sdl/lib/macos/SDL3.framework/Versions/A/: SDL3
prj/libraries/sdl/lib/macos/SDL3.framework/Versions/A/Resources/CMake/: SDL3ConfigVersion.cmake
src/: main.cpp
src/audio/: AudioConstants.h  AudioGenerator.cpp  AudioGenerator.h  Delay.cpp  Delay.h  Envelope.cpp  Filter.cpp  Filter.h  Oscillator.cpp  Oscillator.h
src/shared/: SynthParams.cpp  SynthParams.h
src/ui/: MainWindow.cpp  MainWindow.h
