cmake_minimum_required(VERSION 3.30)
project(62227)

set(CMAKE_CXX_STANDARD 20)

include_directories("libraries/imgui/backends"
        "libraries/imgui"
        "libraries/sdl/include"
        "libraries/portaudio/include")

add_executable(62227 src/main.cpp
        src/ui/MainWindow.cpp
        src/ui/MainWindow.h
        src/audio/AudioGenerator.cpp
        src/audio/AudioGenerator.h
        src/audio/Filter.h
        src/audio/Filter.cpp
        src/audio/Delay.h
        src/audio/Delay.cpp
        ./libraries/imgui/imgui.cpp
        ./libraries/imgui/imgui_demo.cpp
        ./libraries/imgui/imgui_draw.cpp
        ./libraries/imgui/imgui_widgets.cpp
        ./libraries/imgui/imgui_tables.cpp
        ./libraries/imgui/backends/imgui_impl_sdl3.cpp
        ./libraries/imgui/backends/imgui_impl_sdlrenderer3.cpp
        src/audio/Envelope.cpp
        src/audio/Envelope.h
        src/audio/Oscillator.cpp
        src/audio/Oscillator.h
        src/shared/SynthParams.cpp
        src/shared/SynthParams.h
        src/audio/AudioConstants.h
)

if (APPLE)
    target_link_libraries(62227 PRIVATE
            "${CMAKE_SOURCE_DIR}/libraries/sdl/lib/macos/SDL3.framework"
            "-framework CoreFoundation"
            "-framework AudioToolbox"
            "-framework CoreAudio"
            "-framework Carbon"
            "${CMAKE_SOURCE_DIR}/libraries/portaudio/lib/macos/libportaudio.dylib")
elseif (WIN32)
    target_link_libraries(62227 PRIVATE
            "${CMAKE_SOURCE_DIR}/libraries/sdl/lib/win32/sdl3.dll"
            "${CMAKE_SOURCE_DIR}/libraries/portaudio/lib/win32/portaudio_x64.dll"
    )
    # post-build command to copy the DLLs
    add_custom_command(TARGET 62227 POST_BUILD
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
            "${CMAKE_CURRENT_SOURCE_DIR}/libraries/sdl/lib/win32/sdl3.dll"
            "${CMAKE_CURRENT_SOURCE_DIR}/libraries/portaudio/lib/win32/portaudio_x64.dll"
            "$<TARGET_FILE_DIR:62227>"
    )
elseif (UNIX)
    target_link_libraries(62227 PRIVATE
            "-ldl"
            "-ljack"
            "${CMAKE_SOURCE_DIR}/libraries/sdl/lib/linux-x86_64/libSDL3.a"
            "${CMAKE_SOURCE_DIR}/libraries/portaudio/lib/linux-x86_64/libportaudio.a")
endif ()
